Add comment on use of Sampling

--- a/Sampling.ipynb
+++ b/Sampling.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Wordgraph is a subset of Graph, it only contains word -> word edges.\n",
@@ -649,6 +651,7 @@
     }
    ],
    "source": [
+    "#Tjhis code was used on a test database, ru this on the original database on a server .\n",
     "df"
    ]
   }
