Fix itertools function

--- a/Metapaths.ipynb
+++ b/Metapaths.ipynb
@@ -127,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, '17_du', '13_fp', '9_tp', '3_sg', '28_du', '4_tp', 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 'abl. du.', '6_du', '16_pl', 'sg_sp', '10_du', 48, 49, 50, 51, 'voc. fem', '8_pl', 54, 55, 56, '8_tp', 58, 59, 60, 61, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 'acc. du.', '12_sp', 'gen. sg.', '28_pl', 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, '7_pl', '11_tp', '30_fp', 108, 109, 110, 111, 112, 'pl_tp', 114, 115, 116, 117, 118, 119, 120, 121, 122, '27_fp', '4_pl', 128, 129, 130, 131, 132, 'abl. sg.', 134, 135, 136, 137, 138, 139, 140, 141, 142, '16_fp', '15_fp', 'instr. du.', 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, '16_sg', '9_pl', 'instr. neutr.', 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, '28_tp', '27_tp', 'dat', '3_sp', 'nom', '11_fp', '25_sp', '27_pl', '13_pl', '11_du', '6_pl', 'nom. adj.', 'instr. sg.', 'nom. du.', '13_tp', 'acc. neutr.', '30_pl', 'tp', '11_pl', '5_sg', '3_du', 'abl', '12_pl', '3_tp', '12_fp', 'voc. sg.', '17_sg', 'masc', '8_fp', 'instr. fem', '16_tp', '12_du', '6_sg', '4_sp', 'instr. adj.', '11_sp', 'loc. pl.', 'pl', '16_sp', '3_fp', 'sp', '25_du', '6_sp', '5_pl', '10_pl', '5_tp', '31_du', '12_sg', 'nom. pl.', '4_du', 'voc. masc.', '29_sg', 'dat. pl.', 'acc. pl.', '29_tp', '25_fp', '6_tp', '17_pl', 'gen', '10_fp', '28_fp', 'instr. masc.', 'gen. pl.', '8_du', 'nom. fem', '2_sg', '27_sg', 'voc. pl.', '14_pl', '4_fp', 'du', '9_sp', 'loc', '7_sp', '25_sg', 'dat. sg.', 'instr', 'nom. masc.', 'neutr', 'voc', '2_fp', 'acc. fem', 'sg_tp', '11_sg', '14_fp', '28_sg', '14_tp', '2_tp', '5_sp', 'voc. neutr.', '12_tp', 'sg_fp', '4_sg', 'acc. masc.', '17_fp', 'loc. du.', '15_pl', '14_sg', 'adj', 'acc. adj.', 'abl. pl.', '15_du', 'pl_sp', 'instr. pl.', '9_sg', 'dat. du.', -309, -308, -307, -306, 'fp', -303, -302, -301, -299, -297, -296, -293, -292, -291, 'loc. sg.', '15_sg', '13_sg', -283, -279, '10_sg', -276, -273, -271, -269, -268, -266, -263, -262, -261, -260, '9_du', '2_sp', '3_pl', -249, -247, -246, -245, '10_tp', -243, -242, -241, -240, '2_pl', '7_fp', '7_sg', -230, '16_du', '31_fp', '2_du', -220, '30_du', '6_fp', -210, -200, 'acc', '27_du', '9_fp', -190, '25_tp', '17_tp', '31_pl', -169, '8_sp', -166, 'nom. sg.', -163, 'gen. du.', -161, -159, -158, -157, -156, '30_sp', -154, -153, -152, -151, -150, -149, '7_tp', -147, 'pl_fp', -144, -143, -142, -141, '10_sp', -139, '14_sp', -137, '15_sp', '7_du', '13_sp', -133, -132, -131, 'sg', -129, 'fem', 'du_fp', -126, '27_sp', '25_pl', -123, -122, -121, 'du_tp', -119, '31_tp', -117, -115, -114, -113, -112, -111, '8_sg', -109, 'acc. sg.', -104, -103, -102, -101, '5_du', -99, -98, -97, -96, -94, -93, -92, -91, -90, -89, -87, -86, -84, -83, -82, -81, 'du_sp', -79, -78, -77, -76, 'voc. du.', '31_sg', -73, -72, -71, '31_sp', -69, -68, -67, -66, '30_tp', -64, -63, -62, -61, -59, -58, -57, -56, -55, -54, -53, -52, -51, -50, -49, -48, -47, -46, -45, -44, -43, -42, -41, '13_du', -39, -38, -37, -36, -35, -34, -33, -32, -31, -30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, '30_sg', '5_fp', 'nom. neutr.', '15_tp']\n"
+      "[1, 2, 3, '6_pl', '13_fp', '6_tp', 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 'nom. pl.', '9_fp', 'sg', '4_fp', 48, 49, 50, 51, '7_tp', '30_sp', 54, 55, 56, '8_sp', 58, 59, 60, 61, '13_sp', '10_sp', 'loc. pl.', '12_du', '8_fp', 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 108, 109, 110, 111, 112, 'gen', 114, 115, 116, 117, 118, 119, 120, 121, 122, '4_du', '27_fp', 'sg_tp', '2_sp', '14_tp', 128, 129, 130, 131, 132, '29_tp', 134, 135, 136, 137, 138, 139, 140, 141, 142, 'sp', 'pl', '27_pl', '3_sg', 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 'du', 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, '25_sg', 'voc. sg.', 'abl. sg.', '30_tp', '17_pl', '8_pl', '14_sp', '3_fp', '6_fp', '13_tp', 'voc. pl.', 'acc. masc.', '28_du', '4_pl', 'nom. adj.', '2_pl', '10_fp', '28_sg', 'instr. du.', '9_pl', '5_fp', 'voc. neutr.', '12_sp', '11_sg', '7_fp', '2_sg', '17_tp', '28_tp', '12_fp', '28_fp', 'acc. neutr.', '10_sg', '2_du', '9_sg', 'abl. du.', '15_tp', 'acc. sg.', 'nom. masc.', '10_pl', 'pl_fp', 'voc. du.', '13_pl', 'acc', 'fp', '5_du', 'instr. adj.', '25_du', '6_du', 'gen. pl.', '6_sp', '8_du', 'pl_tp', '7_sp', 'tp', '8_tp', '31_sg', '4_sg', '25_pl', '3_sp', '17_sg', 'du_fp', 'acc. du.', '5_pl', '30_du', '31_sp', '31_pl', '10_tp', '9_tp', '11_tp', 'gen. du.', 'loc', 'pl_sp', '27_sp', 'instr. fem', '27_tp', '11_pl', '15_fp', '3_pl', 'acc. fem', '30_fp', '2_fp', '16_sg', 'nom', '16_tp', 'acc. pl.', 'nom. sg.', 'nom. fem', '15_sg', 'masc', '25_fp', 'du_tp', 'nom. du.', 'voc. fem', '15_du', '15_pl', '17_fp', '31_fp', '13_du', 'loc. du.', 'voc', 'du_sp', '27_sg', 'instr. neutr.', '5_sp', '16_pl', '15_sp', -309, -308, -307, -306, 'adj', -303, -302, -301, -299, -297, -296, '5_sg', 'loc. sg.', -293, -292, -291, 'instr. pl.', 'dat. pl.', 'abl', -283, -279, -276, -273, '14_fp', -271, 'gen. sg.', -269, -268, -266, 'instr', -263, -262, -261, -260, 'instr. masc.', '11_du', 'sg_sp', '13_sg', -249, -247, -246, -245, '14_pl', -243, -242, -241, -240, '9_sp', '7_sg', -230, '4_tp', 'neutr', '16_sp', -220, '5_tp', '3_du', -210, '12_pl', 'acc. adj.', -200, -190, '8_sg', '27_du', 'sg_fp', 'dat. sg.', '6_sg', '25_tp', -169, -166, '31_du', -163, '30_sg', -161, '25_sp', -159, -158, -157, -156, -154, -153, -152, -151, -150, -149, '2_tp', -147, 'dat', -144, -143, -142, -141, '16_fp', -139, '10_du', -137, 'nom. neutr.', -133, -132, -131, '12_tp', -129, '4_sp', '9_du', -126, '29_sg', -123, -122, -121, -119, 'instr. sg.', -117, '11_sp', -115, -114, -113, -112, -111, -109, '30_pl', '17_du', -104, -103, -102, -101, '31_tp', -99, -98, -97, -96, 'dat. du.', -94, -93, -92, -91, -90, -89, '16_du', -87, -86, 'fem', -84, -83, -82, -81, 'abl. pl.', -79, -78, -77, -76, 'voc. masc.', '7_pl', -73, -72, -71, -69, -68, -67, -66, '14_sg', -64, -63, -62, -61, '11_fp', -59, -58, -57, -56, -55, -54, -53, -52, -51, -50, -49, -48, -47, -46, -45, -44, -43, -42, -41, '12_sg', -39, -38, -37, -36, -35, -34, -33, -32, -31, -30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, '7_du', '28_pl', '3_tp']\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "#Internal nodes will be of size 0, 1 or 2 \n",
-    "x = combinations_with_replacement(CNG_list,2)\n",
+    "x = product(CNG_list,repeat = 2)\n",
     "Internalnode2 = [i for i in x]\n",
     "Internalnode1 = CNG_list"
    ]
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "#External nodes are \n",
-    "x = combinations_with_replacement([\"Lemma\",\"Word\",\"CNG\"],2)\n",
+    "x = product([\"Lemma\",\"Word\",\"CNG\"], repeat = 2)\n",
     "Externalnodes = [i for i in x]"
    ]
   },
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "655669"
+       "1962802"
       ]
      },
      "execution_count": 13,
@@ -261,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "conn.close()\n"
