Add method to sample with Zero Weight Add Feature Generation from Metapaths

--- a/Sampling.ipynb
+++ b/Sampling.ipynb
@@ -2229,6 +2229,27 @@
    "source": [
     "dfs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#to add word pairs that do not co-occur anytime. \n",
+    "\n",
+    "'''\n",
+    "INSERT INTO Sample( Entity_1, Type_1, Entity_2, Type_2, Weight)\n",
+    "SELECT e.Word, 'Word', n.Word, 'Word', 0\n",
+    "FROM Extracted e, Node n\n",
+    "WHERE e.Filename <> n.Filename AND e.rowid <> n.rowid\n",
+    "GROUP BY e.Word, n.Word;\n",
+    "\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
